src/assets/style/main.scss
html {
  word-break: break-word;
  box-sizing: border-box;
  scroll-behavior: smooth;
  font-size: 14px;
  touch-action: pan-y;

  .MuiButton-root {
    font-size: 1rem;
  }

  .MuiInputLabel-root {
    color: #525457;
  }

  .MuiContainer-root {
    padding: unset;
  }
}

@media (min-width: 600px) { // sm
  html {
    .MuiButton-sizeMedium {
      min-width: 396px;
    }

    .MuiButton-root {
      font-size: 1.2rem;
    }
  }
}

@media (min-width: 600px) { // md
  html {
    .MuiButton-root {
      font-size: 1.3rem;
    }
  }
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

